--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,10 +13,12 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-
+            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".AboutActivity"
+                  android:theme="@style/AppTheme"
+                  android:parentActivityName=".MainActivity">
+        </activity>
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
