--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,9 +14,14 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".AboutActivity"
-                  android:theme="@style/AppTheme"
-                  android:parentActivityName=".MainActivity">
+        <activity android:name=".DataActivity"
+                  android:parentActivityName=".MainActivity"
+                  android:theme="@style/AppTheme">
+        </activity>
+        <activity
+                android:name=".AboutActivity"
+                android:parentActivityName=".MainActivity"
+                android:theme="@style/AppTheme">
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
