--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,19 +13,19 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.TransparentStatusBar">
         <activity android:name=".AvailableAreaActivity"
                   android:parentActivityName=".MainActivity">
         </activity>
         <activity
                 android:name=".DataActivity"
                 android:parentActivityName=".MainActivity"
-                android:theme="@style/AppTheme">
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".AboutActivity"
                 android:parentActivityName=".MainActivity"
-                android:theme="@style/AppTheme">
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
