--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.MKergall:osmbonuspack:6.6.0'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation group: 'math.geom2d', name: 'javaGeom', version: '0.11.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
